Fixed bug with instruction button not resizing properly on smaller screens

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
   background-color: lightgrey;
   border: none;
   border-radius: 8px;
-  font-size: 40px;
+  font-size: 2vw;
   padding: 10px;
   width: 25%;
   height: 20%;
@@ -376,12 +376,6 @@ body {
   /*position: relative;
   z-index: -1;*/
 }
-
-/*.pointsCounter {
-  font-size: 40px;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #fefefe;
-}*/
 
 #playerButtons0, #playerButtons1, #playerButtons2, #playerButtons3 {
   display: grid;
